--- a/RentMyTools.Api/appsettings.json
+++ b/RentMyTools.Api/appsettings.json
@@ -4,5 +4,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RavenDB": {
+    "ServerAddress": "http://localhost",
+    "ServerPort": 10000,
+    "DataDirectory": "Data"
+  }
 }
