--- a/RentMyTools.Api/RentMyTools.Api.csproj
+++ b/RentMyTools.Api/RentMyTools.Api.csproj
@@ -10,6 +10,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.1.1" />
+    <PackageReference Include="RavenDB.Embedded" Version="4.1.1" />
   </ItemGroup>
 
 </Project>
