--- a/RentMyTools.Api/RentMyTools.Api.csproj
+++ b/RentMyTools.Api/RentMyTools.Api.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Automapper" Version="7.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.1.1" />
     <PackageReference Include="RavenDB.Embedded" Version="4.1.1" />
