--- a/RentMyTools.Api/RentMyTools.Api.csproj
+++ b/RentMyTools.Api/RentMyTools.Api.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="RavenDB.Embedded" Version="4.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RentMyTools.Models\RentMyTools.Models.csproj" />
+  </ItemGroup>
+
 </Project>
